<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AbiturientApp</string>
    <string name="logo_icon">logo</string>
    <string name="contacts_name">Контакты</string>
    <string name="about_name">Про нас</string>
    <string name="main_name">Главная</string>
    <string name="logo_of_app1">Volgu</string>
    <string name="logo_of_app2">App</string>
    <string name="longEducation">Длительность обучения:</string>
    <string name="programEducation">Программа:</string>
    <string name="instituteDate">4 года</string>
    <string name="instituteProgram">бакалавриат</string>
    <string name="imitText">\tИМИТ - единственный в регионе институт, выпускающий математиков с классическим университетским образованием, вырастивший за последние несколько лет более 10 докторов и более 25 кандидатов наук, в аспирантуре института по шести специальностям обучается более 10 аспирантов.\n\nНаправления подготовки бакалавров (специальности), по которым осуществляет подготовку институт:\n

        1)Математика и компьютерные науки <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
        2)Прикладная математика и информатика(вступительные экзамены: <u>математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
3)Математическое обеспечение и администрирование информационных систем <u>((вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
4)Прикладная информатика <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
5)Информатика и вычислительная техника <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
6)Информационные системы и технологии <u>(вступительные экзамены: математика (профильный уровень), информатика и ИКТ, русский язык)</u>\n
7)Программная инженерия<u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
8)Прикладные математика и Физика <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
9)Радиофизика <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
10)Радиотехника <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n
11) Фотоника и оптоинформатика <u>(вступительные экзамены: математика (профильный уровень), русский язык и один предмет на выбор поступающего из списка: физика,  информатика и ИКТ, химия, иностранный язык)</u>\n</string>
    <string name="mainSceneText"><b>\t Все еще боишься, что не поступишь со своими баллами? \nЖми на конпку!</b></string>
    <string name="abotPageTittle">Информация о нашем университете</string>
    <string name="aboutPageInformation">\tВ структуру ВолГУ входят 11 институтов; около 50 специальных и общеуниверситетских кафедр, 28 направлений магистратуры, 44 направления подготовки бакалавров, 3 специальности; аспирантура (по 42 специальностям) и докторантура (по 9 специальностям). Существует система дополнительного профессионального образования, реализующая президентскую программу подготовки управленческих кадров и программы профессиональной переподготовки, двойного диплома, профессионального повышения квалификации. Постоянно обучается более 12 тысяч студентов и аспирантов.\n \n Общеуниверситетские подразделения:\n1.Библиотека: Имеется обширная библиотека, включающая отдел редкой книги, в котором собраны дореволюционные издания, документы 20—30-х годов XX столетия и современные книги, представляющие художественную ценность. Книжный фонд научной библиотеки насчитывает около 903 тысяч экземпляров и ведётся за счет пополнения электронными научно-образовательными изданиями.\nЧитатели имеют доступ к ресурсам Электронной библиотеки Российского фонда фундаментальных исследований, журналам, изданиям, базам данных и справочникам.\n2.Издательство: ВолГУ имеет издательство, основанное в 1995 году, ежегодно выпускающее более 25 тысяч экземпляров печатной продукции.\nС 1996 года издаётся научный журнал «Вестник Волгоградского государственного университета».\nС 2001 года издаётся междисциплинарный сборник научных трудов «Исследования молодых учёных».\n\n3.Музейный комплекс\nМузейный фонд создан в 1996 году (открытие состоялось в 1997) по инициативе ректора О. В. Иншакова и насчитывает более 2500 экспонатов. Музейный комплекс включает в себя: Музей истории ВолГУ, Музей курсантских полков, Кабинет-музей академика В. И. Борковского, Музеи археологии, антропологии, этнологии.\nПредставлена история становления и развития университета и вся университетская жизнь: строительство университета, ректорат, структурные подразделения, научная и спортивная деятельность, факультеты и научные школы. На стендах и витринах Музея расположены материалы, рассказывающие о людях, связанных с историей ВолГУ. Экспозиция Музея пополняется.\nКомплекс также занимается составлением «Хроники университетской жизни»; первый выпуск книги, посвященный событиям 2005—2009 гг., был издан к 30-летию университета в 2010 году.\n</string>
    <string name="contactsPageTittle">Наша контактная информация</string>
    <string name="contactsPriemKomissia">Приемная комиссия</string>
    <string name="contactsPriemKomissiaTel">Контактный центр:</string>
    <string name="contactsPriemKomissiaTelNumber" tools:ignore="TypographyDashes">8 (8442) 40–55-47, 40-55-48, 40-58-08</string>
    <string name="priem">Посещение:</string>
    <string name="priemValue">Свободное</string>
    <string name="email">Email:</string>
    <string name="emailValue">priem@volsu.ru</string>
    <string name="customButtonMain">Ввести баллы</string>
    <string name="Scheduler">Режим работы:</string>
    <string name="SchedulerValue">Пн-пт: c 9:00 до 16:00, обед с 12:30 до 13:00</string>
    <string name="Sign">Войти</string>
    <string name="Registry">Зарегистрироваться</string>
    <string name="SignInYourAccount">Войдите в свою учетную запись или зарегистрируйтесь</string>
    <string name="Registration">Регистрация</string>


</resources>