<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrywindow"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration" />
    </LinearLayout>

    <TextView
        android:id="@+id/textBottom"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/SignInYourAccount"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="15dp"
        android:layout_above="@+id/textBottom"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Registry"
            android:textColor="@color/black"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sign"
            android:textColor="@color/black"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"/>
    </LinearLayout>


</RelativeLayout>